<resources>
    <string name="app_name">MedicineApp</string>
    <string name="lab_tests_b">Lab Tests By Health Concern</string>
    <string name="shop_by_cat">Shop by Categories</string>
    <string name="covid_care">Covid Care</string>
    <string name="recently_se">Recently searched</string>
    <string name="telam_40_5m">Telam 40/5mg Strip Of 15 Tablets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo, vel fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum dui faucibus in ornare quam viverra</string>
    <string name="order_according_to_what_prescripted">Order according to what prescripted</string>
    <string name="upload_your_prescription">Upload your prescription</string>
    <string name="your_prescriptions">Your prescriptions</string>
    <string name="why_choose_this_plan">Why Choose This Plan?</string>
    <string name="lorem_ipsum_dolor_sit_amet_lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</string>
    <string name="select_appointment_time">Select Appointment Time</string>
    <string name="myself">Myself</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="family">Family</string>
    <string name="spouse">Spouse</string>
    <string name="daughter_s">Daughter(s)</string>
    <string name="sons_s">Sons(s)</string>
    <string name="cover_amount">Cover Amount</string>
    <string name="your_current_address_pincode">Your Current Address Pincode</string>
    <string name="bullted_list"><b><big>Get access to</big></b>
        \n <li>Item one</li>
        \n <li>Item two</li>
        \n <li>Item three</li>
    </string>
    <string name="patients_details">Patients Details</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="patient_name">Patient Name*</string>
    <string name="upload_report">Upload Report</string>
    <string name="or_choose_from">Or choose from</string>
    <string name="schedule">Schedule</string>
    <string name="done">Done</string>
    <string name="once">Once</string>
    <string name="weekly_every_monday">Weekly(every Monday)</string>
    <string name="monthy_fourth_monday">Monthy(fourth Monday)</string>
    <string name="custom">Custom</string>
    <string name="title_activity_repeat2">Repeat2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="frequency">Frequency</string>
    <string name="every">Every</string>
    <string name="reminder_will_repeat_everyday">Reminder will repeat everyday</string>
    <string name="day"><![CDATA[day >]]></string>
    <string name="day"><![CDATA[day >]]></string>
    <string name="_1_day"><![CDATA[1 day >]]></string>
    <string name="frequency">Frequency</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="reminder_will_repeat_every_week_on_sun">Reminder will repeat every week on Sun</string>


</resources>