<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="480dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/patientdetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/patients_details"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="134dp"
        />
    <TextView
        android:id="@+id/mobilenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patientdetail"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/mobile_number"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="8sp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotoregular"
        />
    <TextView
        android:id="@+id/patientname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patientdetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/patient_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="8sp"
        android:layout_marginStart="213dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"/>

   <ImageView
       android:id="@+id/edtmobile"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/mobilenumber"
       app:layout_constraintStart_toStartOf="parent"
       android:src="@drawable/vec96"
       android:layout_marginStart="42dp"
       android:layout_marginTop="13dp"
       />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/mobilenumber"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="Mobile Number"
        android:textSize="6sp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="5dp"
        />

    <ImageView
        android:id="@+id/imgpatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patientname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/vec96"
        android:layout_marginStart="213dp"
        android:layout_marginTop="13dp"
        />
    <EditText
        android:id="@+id/edtpatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/patientname"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="Patient Name"
        android:textSize="6sp"
        android:layout_marginStart="255dp"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/uploadreport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtmobile"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/upload_report"
        android:textSize="8sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="42dp"
        android:layout_marginTop="9dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnupload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rec205"
        app:layout_constraintTop_toBottomOf="@id/uploadreport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="42dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="42dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnuploadarrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/btnupload"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/upload"
        android:layout_marginTop="9dp"
        android:layout_marginStart="190dp"
        />
    <TextView
        android:id="@+id/choosefrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_choose_from"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="8sp"
        app:layout_constraintTop_toBottomOf="@id/btnupload"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="9dp"
        android:layout_marginStart="42dp"
        android:fontFamily="@font/robotoregular"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/choosefrom"
        android:orientation="horizontal"
        android:id="@+id/prevreport"
        android:layout_marginStart="42dp"
        />











</androidx.constraintlayout.widget.ConstraintLayout>