<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rawtooth.anchal.insurance.Repeat3">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ecllipse15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="278dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ecllipse14"
        android:layout_marginTop="306dp"/>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="        Custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#E5E5E5"/>

    <TextView
        android:id="@+id/frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/frequency"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="22dp"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/robotoregular" />

    <TextView
        android:id="@+id/every"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/every"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="22dp"
        android:layout_marginTop="69dp"
        android:fontFamily="@font/robotoregular" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder_will_repeat_every_week_on_sun"
        android:textSize="8sp"
        app:layout_constraintTop_toBottomOf="@id/every"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="22dp"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/robotoregular"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Week >"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="335dp"
        android:backgroundTint="@color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1 week>"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="68dp"
        android:layout_marginStart="335dp"
        android:backgroundTint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>